zetasql/parser/testdata/use.test

use db
--
UseStatement [0-6]
  Identifier(db) [4-6]
--
USE db
==

use use
--
UseStatement [0-7]
  Identifier(use) [4-7]
--
USE use
==

use `db.table.db`
--
UseStatement [0-17]
  Identifier(`db.table.db`) [4-17]
--
USE `db.table.db`
==

use db1 db2
--
ERROR: Syntax error: Expected end of input but got identifier "db2" [at 1:9]
use db1 db2
        ^
==

use
--
ERROR: Syntax error: Unexpected end of statement [at 1:4]
use
   ^
==
